--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dwellerx.github.io/noidworkspace",
+  "homepage": "https://dwellerx.github.io/noidsworkspace",
   "name": "noidworkspace",
   "version": "0.1.0",
   "private": true,
